compiling_error.txt
C:\Users\Keran\Documents\GitHub\master-mind\mm.cpp: In member function 'void mm_solver::init(int, int)':
C:\Users\Keran\Documents\GitHub\master-mind\mm.cpp:142:43: error: 'pow' was not declared in this scope
         while(set.size() < pow(num, length)){
                                           ^
C:\Users\Keran\Documents\GitHub\master-mind\mm.cpp: In function 'void extract_digits(int, std::vector<int>&)':
C:\Users\Keran\Documents\GitHub\master-mind\mm.cpp:262:53: error: 'pow' was not declared in this scope
     for(int i = 100, j = 10; i <= pow(10, length - 1); i = i * 10, j = j * 10){
                                                     ^
C:\Users\Keran\Documents\GitHub\master-mind\mm.cpp:267:49: error: 'pow' was not declared in this scope
     v.push_back((num - tmp) / pow(10, length - 1));
                                                 ^
